# kio-snapshot

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  REUSE.toml  ksnapshotservice.cpp  ksnapshotservice.h  ksnapshotservice.service.in  org.kde.kio_snapshot.metainfo.xml
common/: btrfssnapshots.cpp  btrfssnapshots.h  snapshotinfotypes.h
contextmenu/: CMakeLists.txt  filesnapshotdialog.cpp  filesnapshotdialog.h  snapshotfileitemaction.cpp  snapshotfileitemaction.h  snapshotfileitemaction.json
kioworker/: CMakeLists.txt  filesnapshots.cpp  filesnapshots.h  filesnapshots.json  snapshot.cpp  snapshot.h  snapshot.json
service/: CMakeLists.txt  README.md  ksnapshotservice.cpp  ksnapshotservice.h  org.kde.KSnapshotService.xml  org.kde.ksnapshotservice.conf  org.kde.ksnapshotservice.service.in
